pom: improved plugin use